--- a/new.html
+++ b/new.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <h2>hello2</h2>
-    <a href="/new.html">nhap vao em di</a>
+    <h1>xin chào</h1>
 </body>
 </html>
